<resources>
    <string name="app_name">BottomSheetLockIt</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="bottomSheet">BottomSheet</string>
    <string name="pop_up">Pop UP</string>
    <string name="click_here">Click here</string>
    <string name="write_text_here">Write text here</string>
    <string name="bottom_sheet_menu_options">Bottom Sheet Menu Options:</string>
    <string name="bottom_sheet_1">BottomSheet: 1</string>
    <string name="bottom_sheet_2">BottomSheet: 2</string>
    <string name="bottom_sheet_3">BottomSheet: 3</string>
</resources>
